k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vitalsync-backend
  labels:
    app: vitalsync-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vitalsync-backend
  template:
    metadata:
      labels:
        app: vitalsync-backend
    spec:
      containers:
        - name: backend
          # Image récupérée du GHCR (GitHub Container Registry)
          image: ghcr.io/pmaioranool/vitalsync-backend:latest
          ports:
            - containerPort: 3000

          # Injection du Secret dans une variable d'environnement
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
