k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: vitalsync.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # On suppose qu'un service 'frontend-service' expose l'interface React/Angular sur le port 80
                name: frontend-service
                port:
                  number: 80
